--- a/written/SC_model/SC_model.tex
+++ b/written/SC_model/SC_model.tex
@@ -166,6 +166,28 @@ and an input to the right or left-side depending on where the light stimulus is 
 The input parameterization was fixed to $I_{\text{constant}} = 0.75$, $I_{\text{P,bias}} = 0.5 $, $I_{\text{P,rule}} = 0.6$,  $I_{\text{A,rule}} = 0.6$,  $I_{\text{choice}} = 0.25$,  and $I_{\text{light}} = 0.5$.
 
 
+\begin{figure}
+\begin{center}
+\includegraphics[scale=0.75]{figs/figSX2.pdf}
+\end{center}
+\caption{\small Sentence 1 .
+A. Rapid task switching behavioral paradigm (see text). 
+B. blah}
+\label{fig:SC_EPI2}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+\includegraphics[scale=0.75]{figs/figSX1.pdf}
+\end{center}
+\caption{\small Sentence 1 .
+A. Rapid task switching behavioral paradigm (see text). 
+B. blah}
+\label{fig:SC_Eigs}
+\end{figure}
+
+
+
 \bibliography{epi}
 \bibliographystyle{unsrt}
 
